puddin recipe complete

--- a/recipes/pudding.html
+++ b/recipes/pudding.html
@@ -29,9 +29,19 @@
     <h2>Steps</h2>
       <ol>
         <li>Gather the ingredients</li>
+
         <li>Pour water into a saucepan and bring to a boil over medium heat; stir in rice.<br>
              Reduce heat to low, cover, and simmer until rice is tender<br>
               and liquid has been absorbed, about 20 minutes.</li>
+
+        <li>Combine cooked rice, 1 ½ cups milk, sugar, and salt in a clean saucepan.<br>
+           Cook over medium heat, stirring often, until thick and creamy, about 15 minutes.</li>      
+
+        <li>Stir in remaining 1/2 cup milk, beaten egg, and raisins;<br>
+           cook 2 minutes more, stirring constantly. Remove from heat<br>
+            and stir in butter and vanilla until combined..</li>   
+
+        <li>Serve warm.</li>    
       </ol> 
 
     
